--- a/动画优化.md
+++ b/动画优化.md
@@ -10,3 +10,6 @@
 - 使用3D硬件加速提升动画性能时，最好给元素增加一个z-index属性，人为干扰复合层的排序，可以有效减少chrome创建不必要的复合层，提升渲染性能，移动端优化效果尤为明显。(来自前端农民工)
 - 使用Chrome Timeline工具检查
 - 时刻把浏览器处理流程记在心里
+
+
+[ 参考文档 ](https://www.w3ctrain.com/2015/12/15/smoother-animation/)
