--- a/动画优化.md
+++ b/动画优化.md
@@ -12,4 +12,4 @@
 - 时刻把浏览器处理流程记在心里
 
 
-[ 参考文档 ](https://www.w3ctrain.com/2015/12/15/smoother-animation/)
+[ 前端性能优化之更平滑的动画----参考文档 ](https://www.w3ctrain.com/2015/12/15/smoother-animation/)
