--- a/移动端.md
+++ b/移动端.md
@@ -2,10 +2,14 @@
 
 ## 目前其他优秀网站的解决方法
 
-- 直接显示，没有过度效果。
-
-- 从右边划出来，像手机QQ设置功能一样。
-
-- 渐变显示。
-
-- 接受这种奇葩的效果。
+- 直接显示，没有过度效果。  
+  代表网站 [ento](https://ento.com/) [腾达](http://www.tenda.com.cn/) 
+  
+- 从 `左边` 或者 `右边` 划出来，像手机QQ设置功能一样。  
+  代表网站 [牛七](http://www.nyun.com/) [ORGATEC](http://www.nyun.com/) [天梯数据](http://tianti.com/) 
+  
+- 渐变显示。  
+  代表网站 [唯品会](http://m.vip.com/?source=www)
+  
+- 接受这种效果。  
+  代表网站 [ghost中文网](http://www.ghostchina.com/) [clever cloud](https://www.clever-cloud.com/) [Dorado](http://www.doradoapps.com/)  [Bootstrap官网](http://www.bootcss.com/)
