--- a/移动端.md
+++ b/移动端.md
@@ -12,4 +12,8 @@
   代表网站 [唯品会](http://m.vip.com/?source=www)
   
 - 接受这种效果。  
-  代表网站 [ghost中文网](http://www.ghostchina.com/) [clever cloud](https://www.clever-cloud.com/) [Dorado](http://www.doradoapps.com/)  [Bootstrap官网](http://www.bootcss.com/)
+  代表网站 
+  - [ghost中文网](http://www.ghostchina.com/)  
+  - [clever cloud](https://www.clever-cloud.com/)  
+  - [Dorado](http://www.doradoapps.com/)  
+  - [Bootstrap官网](http://www.bootcss.com/)
