--- a/移动端.md
+++ b/移动端.md
@@ -23,3 +23,11 @@
   - [clever cloud](https://www.clever-cloud.com/)  
   - [Dorado](http://www.doradoapps.com/)  
   - [Bootstrap官网](http://www.bootcss.com/)
+
+
+## 我的测试
+1. 使用jquery的slideDown,slideUp, or toggleSlide
+
+2. 使用定时器setTimeout
+ 
+2. 使用requestAnimationFrame.
