--- a/移动端.md
+++ b/移动端.md
@@ -26,8 +26,14 @@
 
 
 ## 我的测试
-1. 使用jquery的slideDown,slideUp, or toggleSlide
-
-2. 使用定时器setTimeout
+1. 使用jquery的slideDown,slideUp, or toggleSlide  
+ 实现过于简单，就不写参考代码了
+   
+2. 使用定时器setTimeout  
+ [请查看示例代码](https://github.com/ming25/mobile_PO/blob/master/koa_mobile_animate/views/slide_img.ejs)
  
-2. 使用requestAnimationFrame.
+3. 改变二级菜单的高度。  
+ [请查看示例代码](https://github.com/ming25/mobile_PO/blob/master/koa_mobile_animate/views/index.ejs)
+ 
+2. 使用requestAnimationFrame.  
+ [请查看示例代码](https://github.com/ming25/mobile_PO/blob/master/koa_mobile_animate/views/nav_requestAnimationFrame.ejs)
